# cross-sockets

./: CMakeLists.txt
client/: main.c
include/: cross_sockets.h  ip_address.h  malloc_extension.h  string_extension.h
include/logger/: logger.h
server/: main.c
src/: cross_sockets.c  ip_address.c  ip_address.h  main.c  string.c  string.h  string_extension.c
src/linux/: cross_sockets.c  ip_address.c
src/windows/: cross_sockets.c  ip_address.c
